# backend-mimiq

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  setup.py
.github/workflows/: build-backend.yml
alembic/: env.py
alembic/versions/: 20260424_0001_initial_schema.py  20260424_0002_tts_runtime_state.py  20260430_0003_voice_candidates.py
docker/: Dockerfile  entrypoint.sh
src/: main.py
src/api/: deps.py  router.py  websocket.py
src/api/routes/: auth.py  generations.py  internal.py  metrics.py  status.py  voices.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/db/: session.py
src/models/: auth.py  db.py  generation.py  gpu.py  metric.py  voice.py  websocket.py
src/services/: __init__.py  audio_health.py  auth.py  generation_service.py  github_actions.py  gpu.py  llm.py  storage.py  tts_proxy.py  tts_runtime_state.py  voice_service.py
src/utils/: audio.py
tests/: conftest.py  test_audio_health.py  test_auth.py  test_generation_ws.py  test_gpu.py  test_internal.py  test_status.py  test_tts_runtime_state.py  test_voices.py
