[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvc-backend"
version = "0.1.0"
description = "FastAPI backend for PVC"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.122.0",
  "google-cloud-storage>=3.3.0",
  "httpx>=0.27.0,<0.28.0",
  "librosa>=0.10.2",
  "numpy>=1.26.4",
  "pydantic-settings>=2.3.4",
  "python-json-logger>=2.0.7",
  "python-multipart>=0.0.9",
  "soundfile>=0.12.1",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.1",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
